2005-04-17  Gary Cramblitt (PhantomsDad)
        * Actions to be taken on notifications may now be specified at three levels:
            Specific event of specific application
            All other events of specific application
            All other events
        * When the last event of an application is deleted, delete the app from
          Notifications list.

2005-04-12  Gary Cramblitt (PhantomsDad)
        * Enhanced notification options.  Ability to customize each application event.
        * Enhanced Talker chooser for notifications and Job Manager.
        * Fix bug in Talker matching algorithm.

2005-03-18  Gary Cramblitt (PhantomsDad)
        * Added --systray cmdline option to KTTSMgr, which causes it to start minimized in system
          tray.
        * Added --autoexit cmdline option to KTTSMgr, which causes it to exit when no longer
          speaking any text jobs.
        * Added AutoStartManager and AutoExitManager options to config.  These cause kttsd
          to automatically start KTTSMgr when a text job starts, and automatically exit
          KTTSMgr when all text jobs have finished speaking.

2005-03-16  Gary Cramblitt (PhantomsDad)
        * Bug fix.  Interruption messages are spoken using the Talker of the interrupting message.
          So if default Talker is en, and you do sayMessage "Guten Tag" "de", the "Text Interrupted.
          Message" is spoken using German Talker.  Interruption messages should speak using the
          default Talker.

2005-03-13  Gary Cramblitt (PhantomsDad)
        * Bug.  SBD Filter turned off by default.  Not good!
        * When running kttsd and no Talkers or Filters have been configured, automatically
          attempt to configure them.  Try to configure a Talker in the user's desktop language
          and if that doesn't work, in English.  Automatically configure the Standard
          Sentence Boundary Detector.

2005-03-12  Gary Cramblitt (PhantomsDad)